# cse_436

./: .hgignore  LICENSE.txt  README.md
Assignment1/: Assignment1 Report v3.docx  Assignment1 Report.docx  Assignment_1.docx  Assignment_1_result_plot.xlsx  Assignment_1_result_plot_Kazumi.xlsx  assignment1.c  run.txt  testrun.txt  updateRun.sh  updatedResult.txt
Assignment1/Assignment1 Submission/: assignment1.c
Assignment1/Report/: Assignment1 Report v2.docx  Assignment1 Report v3.docx  Assignment1 Report.docx
Assignment1/Result/: result.txt  testrun1.txt  testrun2.txt
Assignment1/src/: assignment1.c
Assignment2/: Assignment_2.docx  Assignment_2_result_plot.xlsx  Assignment_2_result_plot_Kazumi.xlsx  ResultAt-06-05-1-30.txt  ResultAt-06-05-1-40.txt  ResultAt-06-05-1-50.txt  ResultAt-06-05-1-60.txt  ResultOf_mm_v2.txt  data_to_collect.txt  mm.c  mm_nested.c  mm_v1.c  mm_v2.c  mm_v2_check.c  mm_v2_check.c.orig  parallelmm_taskcheck.xlsx  scheduleResult1.txt  statusOfMay31.txt  sum.c  sum_v2.c
Assignment2/Report/: Assignment2 Report v1.docx  Assignment2 Report v2.docx  Assignment2 Report v3.docx  Assignment_2_result_plot_Kazumi.xlsx  Assignment_2_result_plot_Kazumi_v2.xlsx  RowCol_Describe.xlsx  parallelmm_taskcheck.xlsx
Assignment2/Result/: ResultAt-06-05-1-30.txt  data_to_collect.txt  scheduleResult1.txt  test1.txt  test2.txt  test3.txt
Assignment2/src/: axpy.c  (+5 more)
OpenMP/: CMakeLists.txt  hello.c
OpenMP/src/: axpy.c
gpu_code_examples/: asyncAPI.cu  constantStencil.cu  cublas.cu  cufft.cu  hello-1.cu  hello-2.cu  matvec.cu  reduceInteger.cu  vectorAdd.cu
(+45 files in other folders)
